--- a/src/administration/admins/templates/admins/weight_confirm_delete.html
+++ b/src/administration/admins/templates/admins/weight_confirm_delete.html
@@ -2,11 +2,11 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block base_subtitle %}Product Weight Delete{% endblock %}
-{% block base_subhead_heading %}Product Weight &rAarr; Delete {% endblock %}
-{% block base_subhead_paragraph %}Delete Product Weight permanently{% endblock %}
+{% block base_subtitle %} Weight Delete{% endblock %}
+{% block base_subhead_heading %} Weight &rAarr; Delete {% endblock %}
+{% block base_subhead_paragraph %}Delete  Weight permanently{% endblock %}
 {% block base_subhead_button %}
-    <a href="{% url 'admins:category-list' %}">&larr; Product Weight</a>
+    <a href="{% url 'admins:weight-list' %}">&larr;  Weight</a>
 {% endblock %}
 
 {% block base_content %}
