--- a/src/administration/admins/templates/admins/weight_form.html
+++ b/src/administration/admins/templates/admins/weight_form.html
@@ -2,11 +2,11 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block base_subtitle %}Product Weight Form{% endblock %}
-{% block base_subhead_heading %}Product Weight &rAarr; Form {% endblock %}
+{% block base_subtitle %} Weight Form{% endblock %}
+{% block base_subhead_heading %} Weight &rAarr; Form {% endblock %}
 {% block base_subhead_paragraph %}{% endblock %}
 {% block base_subhead_button %}
-    <a href="{% url 'admins:product-weight-list' %}">&larr;&nbsp;Product Weight</a>
+    <a href="{% url 'admins:weight-list' %}">&larr;&nbsp; Weight</a>
 {% endblock %}
 
 {% block base_content %}
