--- a/src/administration/admins/templates/admins/weight_list.html
+++ b/src/administration/admins/templates/admins/weight_list.html
@@ -1,13 +1,13 @@
 {% extends 'admins/base.html' %}
 {% load static %}
 
-{% block base_subtitle %} Product Weight{% endblock %}
-{% block base_subhead_heading %} Product Weight &rAarr; List{% endblock %}
-{% block base_subhead_paragraph %}List of all available Product Weight{% endblock %}
+{% block base_subtitle %}  Weight{% endblock %}
+{% block base_subhead_heading %}  Weight &rAarr; List{% endblock %}
+{% block base_subhead_paragraph %}List of all available  Weight{% endblock %}
 
 {% block base_subhead_button %}
-    <a class="btn btn-primary" href="{% url 'admins:product-weight-add' %}">
-        Add Product Weight
+    <a class="btn btn-primary" href="{% url 'admins:weight-add' %}">
+        Add  Weight
     </a>
 {% endblock %}
 
@@ -40,10 +40,10 @@
                                     {% endif %}
                                 </td>
                                 <th>
-                                    <a href="{% url 'admins:product-weight-update' object.pk %}">
+                                    <a href="{% url 'admins:weight-update' object.pk %}">
                                         <i class="fa fa-edit"></i>
                                     </a> &nbsp;
-                                    <a href="{% url 'admins:product-weight-delete' object.pk %}" class="text-danger">
+                                    <a href="{% url 'admins:weight-delete' object.pk %}" class="text-danger">
                                         <i class="fa fa-trash"></i>
                                     </a>
                                 </th>
